# Odin

./: .cursorrules  .eslintrc.json  .gitignore  .implementation-summary.md  API_GUIDE.md  ARCHITECTURE_CONFLUENCE_v1.6.0.md  ASYNC_STATISTICS_IMPLEMENTATION_COMPLETE.md  CONFLUENCE_GUIDE.md  CONFLUENCE_TROUBLESHOOTING.md  Dockerfile  FINAL_REPORT.md  FRONTEND_DEVELOPMENT_GUIDE.md  HEALTH_DASHBOARD_v1.1.0.md  HEALTH_DATA_TROUBLESHOOTING.md  HEALTH_MONITORING_PIPELINE.md  HEALTH_TIMESERIES_GUIDE.md  IMAGE_ANALYSIS_GUIDE.md  IMPLEMENTATION_NOTES_ASYNC_STATISTICS.md  IMPLEMENTATION_SUMMARY_v1.6.0.md  IMPLEMENTATION_SUMMARY_v1.7.0.md  IMPLEMENTATION_SUMMARY_v1.7.1.md  IMPLEMENTATION_SUMMARY_v2.0.0.md  LOGGING_GUIDE.md  MAKEFILE_TESTING_GUIDE.md  MICROFRONTEND_ARCHITECTURE.md  MICROSERVICES_GUIDE.md  MICROSERVICES_IMPLEMENTATION_SUMMARY.md  MICROSERVICE_BOOT_FIX.md  Makefile  OPTIMIZATION_SUMMARY.md  QUICKSTART.md  README.md  RELEASES.md  RELEASE_NOTES_v1.2.0.md  RELEASE_NOTES_v1.3.0.md  RELEASE_NOTES_v1.4.0.md  RELEASE_NOTES_v1.5.0.md  RELEASE_NOTES_v1.6.0.md  RELEASE_NOTES_v1.7.0.md  RELEASE_NOTES_v1.7.1.md  (+19 more)
.cursor/rules/: architect-po.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy.yml
backups/: db_backup_20251123_063328.sql
docs/: ASYNC_STATISTICS_GUIDE.md  USE_CASE_Confluence_Statistics.md
docs/architecture/: Functional Analysis — New Page for Frey SPA.md  Odin.code-workspace  architecture-overview.md
docs/architecture/adr/: 0000-template.md
docs/product/: backlog.md  prd-frey-standards-catalog.md  prd-template.md  roadmap.md
frontend/microservices/health/: package.json  tsconfig.json  webpack.config.js
frontend/microservices/health/public/: index.html
frontend/microservices/health/src/: HealthApp.tsx  index.tsx  routes.ts
frontend/portal/: package.json  webpack.config.js
frontend/portal/public/: index.html
frontend/portal/src/: App.tsx  index.tsx
frontend/portal/src/components/: Header.tsx  Layout.tsx  MicroFrontendRoutes.tsx  Navigation.tsx  ProtectedRoute.tsx
frontend/portal/src/context/: AuthContext.tsx  MicroFrontendContext.tsx
frontend/portal/src/pages/: HomePage.tsx  LoginPage.tsx  NotFoundPage.tsx
frontend/portal/src/styles/: global.css
infra/: README.md  main.bicep
infra/modules/: app-insights.bicep  container-apps-env.bicep  key-vault.bicep  log-analytics.bicep  storage.bicep
infra/params/: dev.json  prod.json
nginx/: nginx.conf
scripts/: check-service-inactivity.py  check-services.py  init-health-timescaledb.sql  init-logging.sql  init-minio.sh  init-postgresql.sh  init-timescaledb.sql  init-vault.sh  list-api-services.sh  start-api-service.sh  stop-api-service.sh
src/: __init__.py
src/api/: __init__.py  __main__.py  app.py  config.py  exceptions.py  logging_config.py
src/api/apps/: __init__.py  __main__confluence__.py  __main__data__.py  __main__files__.py  __main__health__.py  __main__image_analysis__.py  __main__llm__.py  __main__logs__.py  __main__messages__.py  __main__secrets__.py  base.py  confluence_app.py  data_app.py  files_app.py  health_app.py  image_analysis_app.py  llm_app.py  logs_app.py  messages_app.py  secrets_app.py
src/api/domain/: __init__.py  entities.py
src/api/middleware/: __init__.py  inactivity_tracker.py
src/api/models/: __init__.py  schemas.py
src/api/repositories/: __init__.py  data_repository.py  health_repository.py  image_repository.py  log_repository.py  query_history_repository.py  statistics_repository.py
src/api/resilience/: __init__.py  circuit_breaker.py  retry.py
src/api/routes/: __init__.py  confluence.py  data.py  files.py  health.py  image_analysis.py  llm.py  logs.py  messages.py  secrets.py
src/api/services/: __init__.py  cache.py  confluence.py  container.py  database.py  db_management.py  image_analysis.py  llm_analysis_service.py  llm_prompts.py  log_service.py  ollama.py  queue.py  storage.py  task_service.py  vault.py  websocket.py
src/web/: __init__.py  __main__.py  app.py  config.py
src/web/routes/: __init__.py  confluence.py  database.py  files.py  health.py  home.py  image_analyzer.py  logs.py  tasks.py
src/web/static/css/: database.css  logs.css  style.css
src/web/static/js/: confluence.js  database.js  files.js  health.js  image_analyzer.js  logs.js  websocket-client.js
src/web/templates/: base.html  confluence.html  database.html  files.html  health.html  image_analyzer.html  index.html  logs.html
src/worker/: __init__.py  beat_schedule.py  celery_app.py  config.py  exceptions.py  logging_config.py
src/worker/services/: confluence_client.py
src/worker/tasks/: __init__.py  batch.py  confluence.py  events.py  maintenance.py  scheduled.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  data.py  services.py
tests/integration/api/: __init__.py  test_api_integration.py  test_health_timeseries.py  test_image_analysis_flow.py  test_microservice_architecture.py
tests/integration/web/: __init__.py  test_confluence_page.py  test_confluence_statistics.py  test_database_management.py  test_health_page.py  test_template_rendering.py  test_web_app.py
tests/integration/worker/: __init__.py  test_beat_schedule.py  test_health_monitoring_pipeline.py  test_health_recording.py  test_task_execution.py
tests/performance/: __init__.py  test_api_performance.py  test_batch_performance.py
tests/regression/: __init__.py  test_database_security.py  test_service_accessibility.py
tests/unit/api/: __init__.py  test_app.py  test_app_factory.py  test_cache_service.py  test_circuit_breaker.py  test_config.py  test_data_repository_errors.py  test_entities.py  test_exceptions.py  test_logging_config.py  test_retry.py  test_routes_error_paths.py  test_schemas.py
tests/unit/api/apps/: __init__.py  test_base.py  (+1 more)
tests/unit/web/: __init__.py  test_app_factory.py  test_config.py  test_health_routes.py  test_home_routes.py
tests/unit/worker/: __init__.py  test_celery_app.py  test_config.py
web/: package-lock.json  package.json
web/app/: page.tsx
(+45 files in other folders)
