[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odin"
version = "0.4.3"
description = "Python project with TDD, SOLID principles, and comprehensive testing"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Nicolas Lallier"}
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pylint>=3.0.0",
]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "-ra",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:passlib.*",
    "ignore::DeprecationWarning:pkg_resources.*",
    "ignore::DeprecationWarning",  # Ignore all deprecation warnings (datetime.utcnow, HTTP_422, etc)
    "ignore::pytest.PytestUnraisableExceptionWarning",  # Ignore unraisable exceptions in async code
    "ignore::RuntimeWarning",  # Ignore runtime warnings during async cleanup
]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests for isolated components",
    "integration: Integration tests for component interactions",
    "regression: Regression tests to prevent bugs from reoccurring",
    "performance: Performance and load tests",
    "slow: Slow tests that take more than a few seconds",
    "worker: Tests that require Celery worker",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/web/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
precision = 2
show_missing = true
skip_covered = false
fail_under = 70.0

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "B904",  # raise from exception chaining - handled case by case
    "ARG001", # unused function argument (common in FastAPI)
    "ARG002", # unused method argument (common in tests/fixtures)
    "ARG005", # unused lambda argument
    "UP047",  # type parameters - Python 3.12 feature not yet adopted
    "SIM102", # nested if - sometimes clearer
    "SIM105", # use contextlib.suppress - sometimes explicit is better
    "SIM108", # ternary operator - sometimes if-else is clearer
    "SIM117", # multiple with statements - sometimes nested is clearer
    "F841",  # unused variable - common for destructuring, side effects
    "B007",  # unused loop variable - common in iterations
    "B017",  # blind exception in assert - common in tests
    "B905",  # zip without strict - backwards compatibility
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
disallow_untyped_defs = false

[tool.pylint.main]
max-line-length = 100

[tool.pylint.format]
max-line-length = 100

[tool.pylint."messages control"]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
]

